--- a/trainer-server/appsettings.json
+++ b/trainer-server/appsettings.json
@@ -1,8 +1,31 @@
 {
+  "AppSettings": {
+    "Secret": "",
+    "connectionString": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "cors": {
+    "rules": [
+      {
+        "origin": "*",
+        "allow": true
+      }
+    ]
+  },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://+:747"
+      },
+      "Https": {
+        "Url": "https://+:748"
+      }
     }
   }
 }
