reversed https support

--- a/trainer-server/appsettings.json
+++ b/trainer-server/appsettings.json
@@ -21,7 +21,7 @@
   "Kestrel": {
     "EndPoints": {
       "Http": {
-        "Url": "https://+:747"
+        "Url": "http://+:747"
       }
     }
   }
